# satori-to-anki

./: .gitignore  README.md  __init__.py  config.json  config.py  const.py  pyproject.toml  requirements.txt  satori_reader_login.py
src/: config.py  flashcards.py  plugin.py  satori_reader_login.py
src/api/: download.py  export.py  flashcards.py  login.py
