[project]
name = "satori_to_anki"
version = "0.1.0"
description = "Anki plugin for importing flashcards from Satori Reader"
readme = "README.md"
# Anki recommends using Python 3.9 since that's what they use:
# https://github.com/ankitects/anki/blob/f6a3e98ac3dcb19d54e7fdbba96bf2fa15fc2b3f/docs/development.md?plain=1#L18
requires-python = "~=3.9"
dependencies = [
    "aqt[qt6]>=24.11",
    "beautifulsoup4>=4.12.3",
    "mypy>=1.13.0",
    "requests>=2.32.3",
    "ruff>=0.8.3",
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",    # Disable documentation linter rules
    "T201", # Allow print statements
    "INP001", # Allow for packages without __init__.py
    "BLE001", # Allow for blind-catch exceptions
]
